fix z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ ul.side-nav.fixed li a {
   #map, #map2 {
     height: 65vh;
     width: 94vw;
-    z-index: -999;
+    z-index: 0;
   }
 
   #facebook {
